# PangeaRSEdit

./: .eslintignore  .gitignore  .gitmodules  AGENTS.md  FINAL_SKELETON_FIX_SUMMARY.md  GAME_MODEL_SELECTOR_IMPLEMENTATION.md  GLTF_TRANSFORM_ANALYSIS.md  OTTO_SKELETON_ANALYSIS.md  REFACTORING.md  SKELETAL_ANIMATION_FIXES.md  SKELETON_TRANSLATION_REQUIREMENTS.md  gltf-transform-research.md  index.html  package-lock.json  package.json  project.code-workspace  skeleton-analysis.md  validate-implementation.js  verify_item_filters.py  vitest.config.ts
.github/: copilot-instructions.md
assets/: bg3dGltfWorker-BUCJftST.js  bg3dGltfWorker-BeN45vvE.js  bg3dGltfWorker-Bfnwh5n0.js  bg3dGltfWorker-CVmdu916.js  bg3dGltfWorker-Ca47DqEk.js  bg3dGltfWorker-D76ZUkcI.js  bg3dGltfWorker-DiYTyqQc.js  index-027qUWdD.css  index-5U_TkMLB.css  index-62ZGbQX6.js  index-8RFguoH-.js  index-B7RbPWWS.css  index-BCGnBb9J.css  index-BGknXno8.css  index-BJATGeoC.css  index-BQ6oYtKG.css  index-BW55B2h4.css  index-BaPWesB8.js  index-BadQzDoz.js  index-BbZMEv6w.js  index-BfB3bgaC.css  index-Bj0y5P3X.css  index-Bo9CdROg.js  index-Byt8ldMn.css  index-C-Djbczc.js  index-C1wJUKj1.js  index-C4Eb-Qhh.js  index-C6ITKI8X.js  index-C6ONCzww.js  index-CKe-ZL75.css  index-CNgHnz66.js  index-CT7RI_RX.js  index-CW0K1qgu.js  index-CcKRzHvN.css  (+55 more)
lzss-rust/: .gitignore  Cargo.toml
lzss-rust/examples/: validate.rs
lzss-rust/src/: lib.rs
lzss-rust/tests/: compatibility_tests.rs
terrain-codec-rust/: Cargo.toml
terrain-codec-rust/src/: errors.rs  jpeg.rs  lib.rs  lzss.rs  nanosaur1.rs  rgb555.rs  terrain_image.rs
(+1698 files in other folders)
