[package]
name = "terrain-codec-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
jpeg-decoder = "0.3"
jpeg-encoder = "0.6"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
